# FileStructurizer

./: .gitignore  CMakeLists.txt  README.md
FileStructurizer/: CMakeLists.txt  main.cpp
FileStructurizer/config/: AppSettings.cpp  AppSettings.h  GraphicsSettings.cpp  GraphicsSettings.h
FileStructurizer/core/: FileStructScene.cpp  FileStructScene.h  FileStructView.cpp  FileStructView.h  FileStructurizer.cpp  FileStructurizer.h
FileStructurizer/graphics/: RectFolder.cpp  RectFolder.h
FileStructurizer/res/: FileStructurizer.qrc  FileStructurizer.ui
FileStructurizer/src/: FileStructurizer.cpp  FileStructurizer.h  main.cpp
cmake/: CMakeLists.txt  cmake.prjconf
res/ui/: FileStructurizer.ui
